--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
   width: 70%;
   gap: 15px;
   padding-left: 0 !important;
+  margin-bottom: 0;
 }
 .links_container li {
   font-family: "Josefin Sans";
@@ -424,7 +425,7 @@ border-radius: 5px;
   transition: ease-in-out 0.5s;
 }
 .imageRight .layout:hover + img , .imagefull_H  .layout:hover + img{
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 .imagefull_H .image_content ,.imageRight .image_content {
  position: absolute;
@@ -740,6 +741,64 @@ background: #3D3D3D;
   letter-spacing: 0.4px;
   color: #FFFFFF;
 }
+.accordion-button:not(.collapsed){
+  color: #3D3D3D !important; 
+}
+.searchPlaceHolder input{
+  padding: 11px 0px;
+  border-radius: 8px;
+  background: #ffffff;
+  border:0;
+  border-radius: 10px;
+  width: 100%;
+}
+.searchPlaceHolder input[type=text]{
+ border: 0;
+}
+.searchPlaceHolder input:focus{
+outline: none;
+}
+.searchPlaceHolder input::placeholder{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  color: #B7B7B7;
+  text-align: center;
+}
+.dateFilter .content-search {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 14px;
+  color: #3D3D3D;
+  cursor: pointer;
+  text-align: center;
+}
+.buttonSearch {
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 8px 24px;
+width: 130px;
+background: #01A8C3;
+border-radius: 5px;
+}
+.buttonSearch:hover {
+ transform: scale(0.9);
+}
+.buttonSearch button {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+}
 /* responsev navbar */
 @media only screen and (max-width: 786px) {
   .nav_container {
@@ -905,7 +964,7 @@ background: #3D3D3D;
    margin:  0 auto;
   }
   .imagefull_H img  {
-    width: 499px;
+    width: 550px;
     height: 400px;
 }
 .rightSide{
@@ -914,7 +973,7 @@ background: #3D3D3D;
 }
 .imageRight img {
   max-width: 100%;
-  width: 500px;
+  width: 550px;
   height:195px ;
   transition: ease-in-out 0.5s;
 }
@@ -979,5 +1038,8 @@ background: #3D3D3D;
   width: 387px;
   height: 154px;
   border-radius: 50%;
+}
+.searchPlaceHolder input::placeholder{
+  font-size: 16px;
 }
  }
