--- a/css/singleTour/style.css
+++ b/css/singleTour/style.css
@@ -15,7 +15,7 @@
 .infoTour {
   position: absolute;
   z-index: 20;
-  bottom: 0;
+  bottom: 35px;
   width: 100%;
   color: #ffffff;
 }
@@ -36,6 +36,11 @@
 .tapsTour {
   background: #e5e5e5;
   padding: 8px 8px 0 !important;
+  position: absolute;
+  top: 0;
+  width: 95%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .layoutviews {
   display: none;
@@ -346,7 +351,10 @@
   font-size: 12.9715px;
   line-height: 13px;
   color: #3d3d3d;
-  text-align: center;
+  text-align: left;
+}
+.roomType {
+  width: 100%;
 }
 .roomType span {
   font-family: "Josefin Sans";
@@ -521,7 +529,7 @@ thead tr {
   }
   .carousel-caption.contentHeader {
     top: auto;
-    bottom: 61px;
+    bottom: 114px;
     left: 10px;
   }
   .carousel-caption.contentHeader p {
