--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 a {
   text-decoration: none !important;
   color: inherit !important;
@@ -32,6 +35,7 @@ body {
   font-family: "Josefin Sans", sans-serif;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+  margin-bottom: 81px !important;
 }
 /* nav bar */
 .nav_container {
@@ -102,7 +106,7 @@ body {
 .menu_container {
   display: none;
 }
-.fa-window-close {
+.fa-times {
   display: none;
 }
 
@@ -341,7 +345,7 @@ body {
   font-family: "Josefin Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 7px;
   display: flex;
   align-items: center;
@@ -376,6 +380,9 @@ body {
   color: #3d3d3d;
   padding-top: 5px;
 }
+.accordion-button:focus {
+  box-shadow: none !important;
+}
 .card_content .priceAndView .viewBtn {
   display: flex;
   flex-direction: row;
@@ -383,7 +390,7 @@ body {
   align-items: center;
   padding: 8px;
   gap: 10px;
-  width: 74px;
+  width: 90px;
   height: 32px;
   background: #ffffff;
   border: 1px solid #dedede;
@@ -825,6 +832,37 @@ div#accordionExample {
   letter-spacing: 0.5px;
   color: #ffffff;
 }
+/* button mobile inquery  */
+.button_moblie {
+  position: fixed;
+  bottom: 0;
+  display: block;
+  padding: 16px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 92px;
+  background: #01a8c3;
+  border-radius: 8px 8px 0px 0px;
+  width: 100%;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 100;
+}
+.button_moblie.close {
+  display: none;
+}
+.button_moblie button {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
 /* responsev navbar */
 @media only screen and (max-width: 786px) {
   .nav_container {
@@ -901,7 +939,7 @@ div#accordionExample {
   .fa-bars.close {
     display: none;
   }
-  .fa-window-close.show {
+  .fa-times.show {
     display: block;
   }
 }
@@ -1081,5 +1119,11 @@ div#accordionExample {
     width: 124px;
     height: 54px;
     font-size: 16.1233px;
+  }
+  .button_moblie {
+    display: none;
+  }
+  body {
+    margin-bottom: 0px !important;
   }
 }
