--- a/css/singleTour/style.css
+++ b/css/singleTour/style.css
@@ -186,11 +186,13 @@
   border-radius: 10px;
   height: 0;
   opacity: 0;
+  visibility: hidden;
   transition: ease-in-out 0.2s;
 }
 .counterbox.active {
   height: auto;
   opacity: 1;
+  visibility: visible;
 }
 .counterbox .counter {
   padding: 15px;
@@ -208,13 +210,13 @@
   line-height: 28px;
   color: #3d3d3d;
 }
-.counterContainer span {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  color: #3d3d3d;
+.counterContainer input {
+  width: 40px;
+  background-color: transparent !important;
+  border: 0;
+}
+.counterContainer input:focus {
+  box-shadow: none !important;
 }
 .counterContainer img:hover {
   transform: scale(0.9);
