--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ body {
 /* cards */
 .sectionTour {
   position: relative;
+  overflow: hidden;
 }
 .leftArrow {
   position: absolute;
@@ -718,7 +719,10 @@ div#accordionExample {
 .coutactUs li {
   display: flex;
   gap: 8px;
-  align-items: center;
+}
+.coutactUs li p {
+  overflow-wrap: break-word;
+  width: 100px;
 }
 .coutactUs li:hover span {
   color: #3d3d3dc9;
@@ -928,6 +932,7 @@ div#accordionExample {
     text-decoration-line: underline;
     color: #3d3d3d;
     text-transform: capitalize;
+    margin-left: 5px;
   }
   .menu_container li.active {
     font-weight: 700;
