--- a/css/listtours/style.css
+++ b/css/listtours/style.css
@@ -208,7 +208,7 @@
   }
   .imageCard img {
     max-width: 100%;
-    width: 372px;
+    width: 100%;
     height: 175px;
   }
   .titelcard div:nth-of-type(1) {
@@ -321,13 +321,10 @@
     cursor: pointer;
     transition: ease-in-out 0.2s;
   }
-  .counterContainer span {
-    font-family: "Josefin Sans";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
-    color: #3d3d3d;
+  .counterContainer input {
+    width: 40px;
+    background-color: transparent !important;
+    border: 0;
   }
   .counterContainer img:hover {
     transform: scale(0.9);
