--- a/css/style.css
+++ b/css/style.css
@@ -663,9 +663,6 @@ div#accordionExample {
   cursor: pointer;
 }
 .linksAndcontactUs {
-  display: flex;
-  align-items: center;
-  gap: 30px;
 }
 .footerLinks {
 }
@@ -986,8 +983,11 @@ div#accordionExample {
   .card {
     min-width: 320px;
   }
+  .sectionTour {
+    overflow: visible;
+  }
   .image-container img {
-    width: 323px;
+    width: 100%;
     height: 162.17px;
   }
   .card_content .titleAndReate .title {
@@ -1026,7 +1026,7 @@ div#accordionExample {
 /* responsev section grallery  */
 @media only screen and (min-width: 786px) {
   .gallary_container {
-    width: 85%;
+    width: 95%;
     margin: 0 auto;
   }
   .imagefull_H img {
@@ -1039,7 +1039,7 @@ div#accordionExample {
   }
   .imageRight img {
     max-width: 100%;
-    width: 550px;
+    width: 100%;
     height: 195px;
     transition: ease-in-out 0.5s;
   }
@@ -1129,5 +1129,9 @@ div#accordionExample {
   }
   body {
     margin-bottom: 0px !important;
+  }
+  .coutactUs li p {
+    overflow-wrap: break-word;
+    width: auto;
   }
 }
